--- a/_config.yml
+++ b/_config.yml
@@ -1,18 +1,20 @@
 menu:
-  Home:
-  Archives: archives
+  首页: /
+  归档: /archives
+  游记: /
 
 widgets:
 - search
 - category
-- tag
+- archive
+- tagcloud
+- links
 
 excerpt_link: Read More
 
-twitter:
-  username:
-  show_replies: false
-  tweet_count: 5
+weixin:
+  qrcode:
+  alt: "欢迎关注个人公众号"
 
 fancybox: true
 
@@ -26,3 +28,7 @@ facebook:
   comment_count: 5
   comment_width: 840
   comment_colorscheme: light
+
+links:
+  谷歌: www.google.com
+  百度: www.baidu.com
